--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.5.0",
+    "mongoose-findorcreate": "^4.0.0",
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0"
   },
   "scripts": {
